2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: set the first default server
	when create a new agent.

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_generalagente.php: show a warning
	message when the agent has not a assigned server.
	
	* operation/agentes/ver_agente.php: some changes for to make more
	easy the merge with the trunk.

2013-08-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/xmlrpc/xmlrpc.inc: fixed the timeout
	for to check packages of pandora update manager.
	
	MERGED FROM THE TRUNK

2013-08-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Small Fix. Corrected error message.

2013-08-19 Miguel de Dios <miguel.dedios@artica.es>
	
	* general/logon_ok.php: fixed the lost "<br>" in the news.
	
	Fixes: #2380
	
	MERGED FROM THE TRUNK

2013-08-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Deleted extra "?>" at the bottom
	that was added at rev8616.

2013-08-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/agent_manager.php,
	godmode/agentes/modificar_agente.php,
	include/functions_agents.php,
	include/functions_modules.php: Added missing enterprise_hook()
	wrapper calls.

2013-08-14 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Removed erroneously committed chunk.

2013-08-14 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Improve the footer layout. My previous commit still
	 had a layout problem :(

2013-08-08 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Improve the footer layout.

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_agente.php: fixed the call to
	enterprise function.
	
	Fixes: #2370 

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_auth.php, godmode/admin_access_logs.php,
	godmode/agentes/module_manager.php: removed the code as