@@ -92,11 +92,13 @@ ui_print_page_header (__('Agent configuration')." &raquo; ".__('Agents defined i
 if (isset($result)) {
 	ui_print_result_message($result, __('Success deleted agent.'), __('Could not be deleted.'));
 	
-	// Check if the remote config file still exist
-	if (isset ($config["remote_config"])) {
-		enterprise_include_once('include/functions_config_agents.php');
-		if (enterprise_hook('config_agents_has_remote_configuration', $id_agente)) {
-			ui_print_error_message(__('Maybe the files conf or md5 could not be deleted'));
+	if (enterprise_installed()) {
+		// Check if the remote config file still exist
+		if (isset ($config["remote_config"])) {
+			enterprise_include_once('include/functions_config_agents.php');
+			if (enterprise_hook('config_agents_has_remote_configuration', $id_agente)) {
+				ui_print_error_message(__('Maybe the files conf or md5 could not be deleted'));
+			}
 		}
 	}
 }
